--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -371,6 +371,7 @@ features:
     - STORAGE-MESSAGE-COUNT
     - STORAGE-HISTORY-WITH-META
     - STORAGE-FETCH-WITH-META
+    - STORAGE-FETCH-WITH-MESSAGE-ACTIONS
   subscribe: 
     - SUBSCRIBE-CHANNELS
     - SUBSCRIBE-CHANNEL-GROUPS
