--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,16 @@ changelog:
   - 
     changes: 
       - 
+        text: "Message Actions added missing TotalCount, Next, Prev for Get Users/Spaces, Manage/Get Members/Memberships"
+        type: improvement
+      - 
+        text: "Return types of Start and End in PNGetMessageActionsMore changed to long"
+        type: improvement
+    date: Nov 22, 19  
+    version: v4.6.0  
+  - 
+    changes: 
+      - 
         text: "Message Actions"
         type: improvement
       - 
@@ -442,4 +452,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.5.0
+version: v4.6.0
