--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -437,6 +437,8 @@ features:
     - OBJECTS-MANAGE-MEMBERSHIPS
     - OBJECTS-GET-MEMBERS
     - OBJECTS-MANAGE-MEMBERS
+    - OBJECTS-FILTERING
+    - OBJECTS-SORTING    
   message-actions:
     - MESSAGE-ACTIONS-GET
     - MESSAGE-ACTIONS-ADD
