Presence Heartbeat fixes

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,16 @@ changelog:
   - 
     changes: 
       - 
+        text: "Heartbeat query param in Presence heartbeat call"
+        type: bug
+      - 
+        text: "Presence Heartbeat defaults to 300"
+        type: improvement
+    date: Jan 16, 19  
+    version: v4.7.2
+  - 
+    changes: 
+      - 
         text: "Objects Filtering"
         type: improvement
     date: Jan 6, 19  
@@ -475,4 +485,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.7.1
+version: v4.7.2
