--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
   - 
     changes: 
       - 
+        text: "HereNow Deserialization Error fix"
+        type: improvement
+    date: Feb 5, 19  
+    version: v4.7.3
+  - 
+    changes: 
+      - 
         text: "Heartbeat query param in Presence heartbeat call"
         type: bug
       - 
@@ -485,4 +492,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.7.2
+version: v4.7.3
