--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ jobs:
   - stage: Install Unity/Run Tests/Export/Deploy
     install:
     - sudo -E sh ./TravisScripts/install.sh
-    script:
-    - sudo -E sh ./TravisScripts/build.sh
+    #script:
+    #- sudo -E sh ./TravisScripts/build.sh
     deploy:
       provider: releases
       api_key:
         secure: "${s}"
       file: "$(pwd)/${UNITYCI_PROJECT_NAME}/${UNITYCI_PACKAGE_NAME}.unitypackage"
-      skip_cleanup: true
+      cleanup: true
       on:
         repo: pubnub/unity
         tags: true
