--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ jobs:
   - stage: Install Unity/Run Tests/Export/Deploy
     install:
     - sudo -E sh ./TravisScripts/install.sh
-    #script:
-    #- sudo -E sh ./TravisScripts/build.sh
+    script:
+    - sudo -E sh ./TravisScripts/build.sh
     deploy:
       provider: releases
       api_key:
