--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,7 @@ env:
   global:
   - UNITYCI_PACKAGE_NAME="PubNub"  
   - UNITYCI_PROJECT_NAME="PubNubUnity"
+  - secure: sUu1lt5DjWdu5yipWJ/P3feodjp0wPePj7d5KmDI+nbhZ3OidPGWxXGSYuRGbbcb5x0kuQy3sECYOaIGFEg8jQlX8CfPt6ImUVntm5UvFbd0f7720FolqF1axGXykDmBdm50aVtmL5m2eb8mTGciJstjppKn0Hppt5KVCuprXAs=
+  - secure: mHp1xygfk5LePe5uMnKl9qmlZS4KyStaHoJydcLovKAPBxXbrASj3jC2vdgzJwdK7288X5KwUGQFZCyyaHDSa0WBcluCl933kfmgcJacTTOfC3GdmX0MuMtfEaa8KjC5bnuYOQMDZ73/XAK7lLGIzQXLO393MwrckL+beE/rdY4=
+  - secure: S94Ss9BjnnA4NiUVdtuvuEP5+n67MKZa/qmsgKSA+6JWxKghHRB1lBEDDSTmPt+LctgpryyYQYvrdpjhXREy7qkXB6wjS9PEd44axeHYyX2z7RjBZtfnIsNvMbVU599h/1Xb6LeeN3ZOiPJzxGyoKAGlbUykfrpFAqUDvZm43cM=
+  - secure: amnc2yg7PWDmWrMk+m/FSp5S9VF5jGzExFRm83uS8P00cgu3/mr83cquXgoMbdjfoJbwcRZnA8kCzp9BdBRqzIdeCPG34rcTfggW+8DEv+nDdem/6GFWBmHK5hTrzGYZEE7h3aTwwCYfz8ujkBRoF4xUWF3pPSkh3rsF9jcjqbw=
