--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,14 @@ jobs:
     - sudo -E sh ./TravisScripts/build.sh
     deploy:
       provider: releases
-      api_key: "${s}"
-      file: "$(pwd)/${UNITYCI_PROJECT_NAME}/${UNITYCI_PACKAGE_NAME}.unitypackage"
+      api_key:
+        secure: ${s}
+      file: $(pwd)/${UNITYCI_PROJECT_NAME}/${UNITYCI_PACKAGE_NAME}.unitypackage
       skip_cleanup: true
       on:
         repo: pubnub/unity
-        tags: true
+        #branch: master
+        tags: true        
 env:
   global:
   - UNITYCI_PACKAGE_NAME="PubNub"
