Existing feature updates

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -426,6 +426,7 @@ features:
     - PRESENCE-HEARTBEAT-ON-DEMAND
     - PRESENCE-HEARTBEAT-THROTTLED    
     - PRESENCE-HERE-NOW-REFRESH
+    - PRESENCE-DELTAS
   publish: 
     - PUBLISH-STORE-FLAG
     - PUBLISH-WITH-METADATA
@@ -434,6 +435,8 @@ features:
     - PUBLISH-ASYNC
     - PUBLISH-MESSAGE-TTL
     - PUBLISH-FIRE
+    - PUBLISH-REPLICATION-FLAG
+    - PUBLISH-RAW-JSON
   push: 
     - PUSH-ADD-DEVICE-TO-CHANNELS
     - PUSH-REMOVE-DEVICE-FROM-CHANNELS
@@ -485,10 +488,14 @@ features:
     - OBJECTS-GET-MEMBERS
     - OBJECTS-MANAGE-MEMBERS
     - OBJECTS-FILTERING
+    - OBJECTS-SORTING
   message-actions:
     - MESSAGE-ACTIONS-GET
     - MESSAGE-ACTIONS-ADD
-    - MESSAGE-ACTIONS-REMOVE    
+    - MESSAGE-ACTIONS-REMOVE  
+  unsubscribe: 
+    - UNSUBSCRIBE-ALL
+    - UNSUBSCRIBE-SUPPRESS-LEAVE-EVENTS    
   time: 
     - TIME-TIME
   signal:
