--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 *         @crimsonred @mohitpubnub @budgetpreneur
 .travis/* @parfeon @crimsonred @budgetpreneur
-README.md @polarweasel @samiahmedsiddiqui @techwritermat
+README.md @techwritermat
