--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,6 +1,13 @@
 --- 
-version: v5.0.1
+version: v6.0.0
 changelog:
+  -
+    changes:
+      -
+        text: "SetToken and ParseToken for PAMv3."
+        type: feature
+    date: 2021-09-30
+    version: v6.0.0
   -
     changes:
       -
@@ -466,6 +473,8 @@ changelog:
 features: 
   access: 
     - ACCESS-TOKEN-MANAGEMENT
+    - ACCESS-PARSE-TOKEN
+    - ACCESS-SET-TOKEN
   channel-groups: 
     - CHANNEL-GROUPS-ADD-CHANNELS
     - CHANNEL-GROUPS-REMOVE-CHANNELS
