--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -7,7 +7,7 @@ changelog:
         text: "SetToken and ParseToken for PAMv3."
         type: feature
       - 
-        text: "BREAKING CHANGE - Renmoved Token Management System - Client end"
+        text: "BREAKING CHANGE - Removed Token Management System - Client end"
         type: improvement        
     date: 2021-10-12
     version: v6.0.0
