--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Integration and Unit tests
 concurrency: unity_run
 
 on:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   tests:
-    name: Run tests
+    name: Run Unity tests
     runs-on: macos-latest
     env:
       EVENT_NOKQUEUE: 1
@@ -25,7 +25,7 @@ jobs:
         uses: ./.github/.release/actions/actions/installers/unity
         with:
           unity-version: "2019.2.11f1"
-      - name: Test edit mode
+      - name: Unit tests
         uses: ./.github/.release/actions/actions/runners/unity
         with:
           project-path: ./PubNubUnity
@@ -33,7 +33,11 @@ jobs:
           license-username: ${{ secrets.UNITYCI_NEW_USER }}
           license-password: ${{ secrets.UNITYCI_NEW_PASS }}
           license-serial: ${{ secrets.UNITYCI_NEW_SERIAL }}
-      - name: List packages
-        shell: bash
-        run: |
-          ls -la ./PubNubUnity/Packages
+      - name: Integration tests
+        uses: ./.github/.release/actions/actions/runners/unity
+        with:
+          project-path: ./PubNubUnity
+          test-mode: play
+          license-username: ${{ secrets.UNITYCI_NEW_USER }}
+          license-password: ${{ secrets.UNITYCI_NEW_PASS }}
+          license-serial: ${{ secrets.UNITYCI_NEW_SERIAL }}
