--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
   publish:
-    name: Publish package
-    runs-on: ubuntu-latest
+    name: Build package
+    runs-on: macos-11
     needs: check-release
     if: ${{ needs.check-release.outputs.release == 'true' }}
     steps:
@@ -49,7 +49,7 @@ jobs:
         uses: ./.github/.release/actions/actions/installers/unity
         with:
           unity-version: "2019.2.11f1"
-      - name: Publish to RubyGems
+      - name: Build Unity package
         uses: ./.github/.release/actions/actions/services/unity
         with:
           token: ${{ secrets.GH_TOKEN }}
