docs: fix change entries
Small adjustments to change entries in `.pubnub.yml`.

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -7,9 +7,9 @@ changelog:
       - type: bug
         text: "Fixes continuous allocation of components per request."
       - type: improvement
-        text: "reduce the load of `TestPublishLoadTest` to stop derailing the pipeline"
+        text: "Reduce the load of `TestPublishLoadTest` to stop derailing the pipeline."
       - type: improvement
-        text: "Disable TestPublishLoadTest temporarily"
+        text: "Disable `TestPublishLoadTest` temporarily."
   - date: 2022-06-28
     version: v6.0.2
     changes:
