--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-*         @crimsonred @mohitpubnub @budgetpreneur
+*         @crimsonred @mohitpubnub @budgetpreneur @MikeDobrzan
 .travis/* @parfeon @crimsonred @budgetpreneur
 README.md @techwritermat
