--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,6 +1,11 @@
 --- 
-version: v6.0.3
+version: v6.0.4
 changelog:
+  - date: 2022-07-27
+    version: v6.0.4
+    changes:
+      - type: improvement
+        text: "UUID has been marked as deprecated, and it's being renamed to UserId. For now, both variants will work, but UUID will be gradually phased out in favor of UserId."
   - date: 2022-07-12
     version: v6.0.3
     changes:
@@ -643,7 +648,7 @@ sdks:
             distribution-type: package
             distribution-repository: git release
             package-name: PubNub.unitypackage
-            location: https://github.com/pubnub/unity/releases/download/v6.0.3/PubNub.unitypackage
+            location: https://github.com/pubnub/unity/releases/download/v6.0.4/PubNub.unitypackage
             requires:
               -
                 name: "UnityEditor"
@@ -810,7 +815,7 @@ sdks:
             distribution-type: package
             distribution-repository: git release
             package-name: PubNub.unitypackage
-            location: https://github.com/pubnub/unity/releases/download/v5.0.0/PubNub.unitypackage
+            location: https://github.com/pubnub/unity/releases/download/v6.0.4/PubNub.unitypackage
             requires:
               -
                 name: "UnityEditor"
