--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-*         @crimsonred @mohitpubnub @budgetpreneur @MikeDobrzan
-.travis/* @parfeon @crimsonred @budgetpreneur
-README.md @techwritermat
+*         @mohitpubnub @budgetpreneur @MikeDobrzan
+.travis/* @parfeon @budgetpreneur
+README.md @techwritermat @kazydek
