fix: add exporter variable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           project-path: ./PubNubUnity
           package-name: PubNub
+          export-method-name: PubNubPackageExporter.ExportPackage
           license-username: ${{ secrets.UNITYCI_NEW_USER }}
           license-password: ${{ secrets.UNITYCI_NEW_PASS }}
           license-serial: ${{ secrets.UNITYCI_NEW_SERIAL }}
