--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,22 @@
 name: Automated product release
-concurrency: unity_run
 
 on:
   pull_request:
     branches: [ master ]
     types: [ closed ]
+concurrency: unity_run
 
 
 jobs:
   check-release:
     name: Check release required
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged && endsWith(github.repository, '-private') != true }}
+    if: github.event.pull_request.merged && endsWith(github.repository, '-private') != true
     outputs:
       release: ${{ steps.check.outputs.ready }}
     steps:
       - name: Checkout actions
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: pubnub/client-engineering-deployment-tools
           ref: v1
@@ -31,15 +31,15 @@ jobs:
     name: Build package
     runs-on: macos-11
     needs: check-release
-    if: ${{ needs.check-release.outputs.release == 'true' }}
+    if: needs.check-release.outputs.release == 'true'
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           # This should be the same as the one specified for on.pull_request.branches
           ref: master
       - name: Checkout actions
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: pubnub/client-engineering-deployment-tools
           ref: v1
