--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,9 +1,12 @@
 name: Tests
-concurrency: unity_run
 
 on:
   push:
   workflow_dispatch:
+concurrency: unity_run
+defaults:
+  run:
+    shell: bash
 
 jobs:
   tests:
@@ -18,9 +21,9 @@ jobs:
       PAM_SECRET_KEY: ${{ secrets.PAM_SECRET_KEY }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Checkout actions
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: pubnub/client-engineering-deployment-tools
           ref: v1
@@ -46,3 +49,6 @@ jobs:
           license-username: ${{ secrets.UNITYCI_NEW_USER }}
           license-password: ${{ secrets.UNITYCI_NEW_PASS }}
           license-serial: ${{ secrets.UNITYCI_NEW_SERIAL }}
+      - name: Cancel workflow runs for commit on error
+        if: failure()
+        uses: ./.github/.release/actions/actions/utils/fast-jobs-failure
