--- a/PubNubUnity/Assets/PubNub/package.json
+++ b/PubNubUnity/Assets/PubNub/package.json
@@ -4,9 +4,9 @@
   "displayName": "PubNub SDK",
   "description": "PubNub Real-time Cloud-Hosted Push API and Push Notification Client Frameworks",
   "unity": "2021.3",
-  "documentationUrl": "https://www.pubnub.com/docs/sdks/c-sharp",
-  "changelogUrl": "https://example.com/changelog.html",
-  "licensesUrl": "https://github.com/pubnub/c-sharp/blob/master/LICENSE",
+  "documentationUrl": "https://www.pubnub.com/docs/sdks/unity",
+  "changelogUrl": "https://github.com/pubnub/unity/.pubnub.yml",
+  "licensesUrl": "https://github.com/pubnub/unity/blob/master/LICENSE",
   "dependencies": {
     "com.unity.nuget.newtonsoft-json": "3.0.2"
   },
@@ -17,10 +17,7 @@
   "author": {
     "name": "PubNub",
     "email": "michal.dobrzanski@pubnub.com",
-    "url": "https://pubnub.com"
+    "url": "https://pubnub.com/"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
-  "repository": "https://github.com/pubnub/c-sharp"
+  "repository": "https://github.com/pubnub/unity"
 }
