chore: add additional codeowner
Add @parfeon as additional codeowner.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-*         @mohitpubnub @budgetpreneur @MikeDobrzan
+*         @mohitpubnub @budgetpreneur @MikeDobrzan @parfeon
 .travis/* @parfeon @budgetpreneur
 README.md @techwritermat @kazydek
