--- a/PubNubUnity/Packages/manifest.json
+++ b/PubNubUnity/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.5",
     "com.unity.analytics": "3.6.12",
+    "com.unity.asset-store-tools": "https://github.com/Unity-Technologies/com.unity.asset-store-tools.git/?path=/com.unity.asset-store-tools/",
     "com.unity.collab-proxy": "1.17.1",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "3.0.15",
