--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
-*         @mohitpubnub @budgetpreneur @MikeDobrzan @parfeon
-.travis/* @parfeon @budgetpreneur
+*         @Xavrax @mohitpubnub @parfeon
 README.md @techwritermat @kazydek
