--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
-*         @mohitpubnub @budgetpreneur @MikeDobrzan @parfeon
-.travis/* @parfeon @budgetpreneur
-README.md @techwritermat @kazydek
+*         @xavrax @mohit-pubnub
+README.md @techwritermat @kazydek @xavrax @mohit-pubnub
