Fix typo in Mohit id

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-*         @xavrax @mohit-pubnub
-README.md @techwritermat @kazydek @xavrax @mohit-pubnub
+*         @xavrax @mohitpubnub
+README.md @techwritermat @kazydek @xavrax @mohitpubnub
