Chore - Codeowners Updated (#97)
* Chore - Codeowners Updated

* Fix typo in Mohit id

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
-*         @mohitpubnub @budgetpreneur @MikeDobrzan @parfeon
-.travis/* @parfeon @budgetpreneur
-README.md @techwritermat @kazydek
+*         @xavrax @mohitpubnub
+README.md @techwritermat @kazydek @xavrax @mohitpubnub
