--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,21 +2,22 @@ name: Automated product release
 
 on:
   pull_request:
-    branches: [ master ]
-    types: [ closed ]
+    branches: [master]
+    types: [closed]
 concurrency: unity_run
-
 
 jobs:
   check-release:
     name: Check release required
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Default Larger Runners
+      labels: ubuntu-latest-m
     if: github.event.pull_request.merged && endsWith(github.repository, '-private') != true
     outputs:
       release: ${{ steps.check.outputs.ready }}
     steps:
       - name: Checkout actions
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: pubnub/client-engineering-deployment-tools
           ref: v1
@@ -29,17 +30,19 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
   publish:
     name: Build package
-    runs-on: macos-11
+    runs-on:
+      group: Default
+      labels: macos-latest
     needs: check-release
     if: needs.check-release.outputs.release == 'true'
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           # This should be the same as the one specified for on.pull_request.branches
           ref: master
       - name: Checkout actions
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: pubnub/client-engineering-deployment-tools
           ref: v1
